# api/api.go
@@ -18,6 +18,14 @@ func NewApi(r *gin.Engine, cfg *config.Config, store storage.StorageI, logger lo
 
 	//  report
 	r.PUT("/report/exchange", handler.ExchangeStoreProductHandler)
+	r.GET("/report/employee", handler.GetEmployeeReport)
+
+
+	// promo_code api
+	r.POST("/promo_code", handler.CreatePromoCode)
+	r.GET("/promo_code/:id", handler.GetByIdPromoCode)
+	r.GET("/promo_code", handler.GetListPromoCode)
+	r.DELETE("/promo_code/:id", handler.DeletePromoCode)
 
 	// category api
 	r.POST("/category", handler.CreateCategory)
