# api/handler/report.go
@@ -8,6 +8,8 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// TASK1
+
 // Exchange Products In Stores godoc
 // @ID create_exchange
 // @Router /report/exchange [PUT]
@@ -60,4 +62,47 @@ func (h *Handler) ExchangeStoreProductHandler(c *gin.Context) {
 
 	h.handlerResponse(c, "exchange_product", http.StatusCreated, models.ResponseExchange{FromData: fromData, ToData: toData})
 
+}
+
+// TASK2
+
+// Get LEmployee Report
+// @ID get_list_emmployee_report
+// @Router /report/employee [GET]
+// @Summary Report
+// @Description Report
+// @Tags Report
+// @Accept json
+// @Produce json
+// @Param offset query string false "offset"
+// @Param limit query string false "limit"
+// @Param search query string false "search"
+// @Success 200 {object} Response{data=string} "Success Request"
+// @Response 400 {object} Response{data=string} "Bad Request"
+// @Failure 500 {object} Response{data=string} "Server Error"
+func (h *Handler) GetEmployeeReport(c *gin.Context) {
+
+	offset, err := h.getOffsetQuery(c.Query("offset"))
+	if err != nil {
+		h.handlerResponse(c, "get list product", http.StatusBadRequest, "invalid offset")
+		return
+	}
+
+	limit, err := h.getLimitQuery(c.Query("limit"))
+	if err != nil {
+		h.handlerResponse(c, "get list product", http.StatusBadRequest, "invalid limit")
+		return
+	}
+
+	resp, err := h.storages.Report().StaffSaleReport(context.Background(), &models.GetListEmployeeReportRequest{
+		Offset: offset,
+		Limit:  limit,
+		Search: c.Query("search"),
+	})
+	if err != nil {
+		h.handlerResponse(c, "storage.product.getlist", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	h.handlerResponse(c, "get list product response", http.StatusOK, resp)
 }
